--- a/app/package.json
+++ b/app/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
